fix(🐛): Steps item shifts in vertical mode (#26894)
close #26874

--- a/components/steps/style/vertical.less
+++ b/components/steps/style/vertical.less
@@ -4,7 +4,9 @@
   .@{steps-prefix-cls}-item {
     display: block;
     flex: 1 0 auto;
+    padding-left: 0;
     overflow: visible;
+
     &-icon {
       float: left;
       margin-right: @steps-vertical-icon-width;
